# mojokernel

./: .gitignore  DEV.md  README.md  pyproject.toml
.github/workflows/: release.yml
mojokernel/: __init__.py  __main__.py  _version.py  kernel.py  lsp_client.py
mojokernel/engines/: base.py  pexpect_engine.py  server_engine.py
mojokernel/kernelspec/: kernel.json
server/: mojo_repl.cpp  repl_server.cpp  repl_server_pty.cpp  test_jupyter_lib.cpp
tests/: test_kernel.py  test_lsp_client.py  test_pexpect_engine.py  test_server_execute.py  test_server_protocol.py
tools/: build_server.sh  check_mojo.sh  clean.sh  dylib_strings.sh  dylib_symbols.sh  explore_kernel_client.py  explore_lsp.py  find_symbol.sh  find_symbol_all.sh  install_kernel.sh  modroot.sh  run_repl.sh  server_exec.py  start_server.sh  stop_server.sh  test.sh  test_notebook.sh  test_pty_server.py  test_server.sh  test_server_startup.sh  tmux_repl.sh  tmux_send.sh  uninstall_kernel.sh
