[project]
name = "mojokernel"
version = "0.1.0"
description = "Jupyter kernel for Mojo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.0",
    "pexpect>=4.0",
    "safecmd>=0.1.2",
]

[tool.setuptools.packages.find]
include = ["mojokernel*"]

[tool.setuptools.package-data]
mojokernel = ["kernelspec/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mojokernel = "mojokernel.__main__:main"
